[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Rust-cli book example app 

# see https://rust-cli.github.io/book/tutorial/setup.html

[dependencies]
clap =  { version = "3.0", features = ["derive"] }
anyhow = "1.0"

